Fixed Spacing for block-9-title

--- a/style.css
+++ b/style.css
@@ -154,6 +154,7 @@
   font-size: 18pt;
   font-weight: 400;
   text-align: left;
+  letter-spacing: 0px
 }
 
 #block-9-Char {
